# flexprice-cli

./: Cargo.toml  README.md
src/: main.rs
src/api/: client.rs  models.rs
src/cli/: auth.rs  customers.rs  entitlements.rs  events.rs  features.rs  invoices.rs  meters.rs  mod.rs  plans.rs  subscriptions.rs  wallets.rs
src/config/: mod.rs  store.rs
src/tui/: dashboard.rs  mod.rs  theme.rs
src/utils/: mod.rs  output.rs  spinner.rs
