[package]
name = "flexprice-cli"
version = "0.1.0"
edition = "2021"
description = "A beautiful terminal CLI for the FlexPrice billing platform"
authors = ["FlexPrice"]
license = "MIT"

[[bin]]
name = "flexprice"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "color"] }

# Async runtime + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"
dirs = "6"

# Output formatting
tabled = { version = "0.17", features = ["ansi"] }
colored = "3"
indicatif = "0.17"
console = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
dialoguer = { version = "0.11", features = ["password"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
